--- a/lib/components/fo_check/fo_check_component.scss
+++ b/lib/components/fo_check/fo_check_component.scss
@@ -9,7 +9,7 @@
         -ms-user-select: none;
         user-select: none;
 
-        // Hide the browser's default checkbox
+        // Hide the default checkbox
         input {
             position: absolute;
             opacity: 0;
