--- a/lib/components/fo_toggle/fo_toggle_component.scss
+++ b/lib/components/fo_toggle/fo_toggle_component.scss
@@ -15,6 +15,7 @@
             opacity: 0;
             width: 0;
             height: 0;
+            margin: 0;
         }
 
         /* The slider */
@@ -39,7 +40,6 @@
             width: 1.2em;
             top: -0.1em;
             box-sizing: border-box;
-            //border: 1px solid #ccc;
             background-color: white;
             -webkit-transition: 0.2s;
             transition: 0.2s;
