--- a/lib/src/components/fo_dropdown/_mixins.scss
+++ b/lib/src/components/fo_dropdown/_mixins.scss
@@ -1,7 +1,7 @@
 @mixin fo-dropdown-border-color($color) {
   ::ng-deep fo-dropdown {
     div#fixer.visible {
-      border-color: $color;
+      border-color: $color !important;
     }
   }
 }
