--- a/lib/_mixins.scss
+++ b/lib/_mixins.scss
@@ -3,6 +3,7 @@ $transitionSpeed: 0.3s ease;
 @import "components/fo_button/mixins";
 @import "components/fo_file_upload/mixins";
 @import "components/fo_image_file/mixins";
+@import "components/fo_date_picker/mixins";
 @import "src/components/fo_dropdown/mixins";
 @import "src/components/fo_dropdown_list/mixins";
 @import "components/fo_dropdown_select/mixins";
@@ -42,6 +43,7 @@ $transitionSpeed: 0.3s ease;
   @include fo-button-colors(white, $primaryColor, $grayColorBright);
   @include fo-dropdown-border-color($grayColorBright);
   @include fo-dropdown-list-colors($primaryColor, $grayColor, $grayColorBright);
+  @include fo-date-picker-colors($grayColor, $grayColorBright, $primaryColor);
   @include fo-dropdown-select-colors($grayColor, $grayColorBright, $primaryColor);
   @include fo-file-upload-border-color($grayColorBright);
   @include fo-image-file-colors($grayColorBright, $grayColorBright, $grayColor);
