improved load indicator design

--- a/lib/components/fo_file_upload/fo_file_upload_component.html
+++ b/lib/components/fo_file_upload/fo_file_upload_component.html
@@ -18,8 +18,7 @@
                     icon="folder_open">
          </fo-button>
          <ng-container *ngIf="uploading">
-            <fo-load-indicator></fo-load-indicator>
-            <fo-label [value]="uploadingLabel"></fo-label>
+            <fo-load-indicator [label]="uploadingLabel"></fo-load-indicator>
          </ng-container>
       </div>
    </div>
