--- a/lib/components/fo_load_indicator/fo_load_indicator_component.html
+++ b/lib/components/fo_load_indicator/fo_load_indicator_component.html
@@ -1,4 +1,7 @@
-<div class="ripple">
-    <div></div>
-    <div></div>
+<div class="spinner">
+    <div class="circleBorder">
+        <div class="circleCore"></div>
+    </div>
 </div>
+<fo-label *ngIf="label.isNotEmpty"
+          [value]="label"></fo-label>
