--- a/lib/components/fo_radio/fo_radio_component.scss
+++ b/lib/components/fo_radio/fo_radio_component.scss
@@ -1,8 +1,9 @@
 :host {
     display: flex;
+    align-items: center;
     #checkContainer {
-        width: 1em;
-        height: 1em;
+        width: 1.2em;
+        height: 1.2em;
         position: relative;
         cursor: pointer;
         -webkit-user-select: none;
@@ -10,7 +11,7 @@
         -ms-user-select: none;
         user-select: none;
         border: 1px solid; // #ccc;
-        border-radius: 0.2em;
+        border-radius: 1.2em;
         box-sizing: content-box;
         margin-right: 0.3em;
 
@@ -33,10 +34,10 @@
             position: absolute;
             top: 0;
             left: 0;
-            height: 1em;
-            width: 1em;
+            height: 1.2em;
+            width: 1.2em;
             background-color: white;
-            border-radius: 0.2em;
+            border-radius: 1.2em;
             box-sizing: border-box;
         }
 
@@ -51,10 +52,10 @@
         .mark:after {
             left: 0.2em;
             top: 0.2em;
-            width: 0.6em;
-            height: 0.6em;
+            width: 0.8em;
+            height: 0.8em;
             background-color: white;
-            border-radius: 0.1em;
+            border-radius: 50%;
         }
     }
 }
