improved checkbox designs

--- a/lib/_mixins.scss
+++ b/lib/_mixins.scss
@@ -37,9 +37,9 @@ $transitionSpeed: 0.3s ease;
   $alertColorBright: lighten($alertColor, $lightstep);
 
   @include fo-load-indicator-color($primaryColor);
-  @include fo-check-colors($primaryColor, $grayColorBright);
-  @include fo-radio-colors($primaryColor, $grayColorBright);
-  @include fo-toggle-colors($primaryColor, $grayColorBright);
+  @include fo-check-colors($primaryColor, lighten($grayColor, $lightstep));
+  @include fo-radio-colors($primaryColor, lighten($grayColor, $lightstep));
+  @include fo-toggle-colors($primaryColor, lighten($grayColor, $lightstep));
   @include fo-button-colors(white, $primaryColor, $grayColorBright);
   @include fo-dropdown-border-color($grayColorBright);
   @include fo-dropdown-list-colors($primaryColor, $grayColor, $grayColorBright);
@@ -47,7 +47,7 @@ $transitionSpeed: 0.3s ease;
   @include fo-dropdown-select-colors($grayColor, $grayColorBright, $primaryColor);
   @include fo-file-upload-border-color($grayColorBright);
   @include fo-image-file-colors($grayColorBright, $grayColorBright, $grayColor);
-  @include fo-label-color($grayColor);
+  @include fo-label-color(darken($grayColor, $lightstep));
   @include fo-modal-colors(lighten($grayColorBright, 10%), $alertColor);
   @include fo-tab-panel-colors(darken($grayColor, $lightstep), $primaryColor);
   @include fo-text-input-colors(darken($grayColor, $lightstep), $grayColorBright, $primaryColor, $alertColor);
