--- a/lib/components/fo_toggle/fo_toggle_component.html
+++ b/lib/components/fo_toggle/fo_toggle_component.html
@@ -1,9 +1,8 @@
-<label class="switch">
-    <input type="checkbox"
-           [checked]="checked"
-           [disabled]="disabled"
-           (change)="onChange()">
-    <span class="slider"></span>
-</label>
+<div class="slider"
+     [class.disabled]="disabled"
+     [class.checked]="checked"
+     (click)="onChange()">
+    <div class="marker"></div>
+</div>
 <fo-label [value]="label"
           (click)="onChange()"></fo-label>
