--- a/lib/components/fo_check/fo_check_component.scss
+++ b/lib/components/fo_check/fo_check_component.scss
@@ -1,51 +1,31 @@
 :host {
     display: flex;
     align-items: center;
-    #checkContainer {
-        width: 1.2em;
-        height: 1.2em;
+    div#checkContainer {
+        width: 1.25em;
+        height: 1.25em;
         position: relative;
         cursor: pointer;
         -webkit-user-select: none;
         -moz-user-select: none;
         -ms-user-select: none;
         user-select: none;
-        border: 1px solid; // #ccc;
+        border: 1px solid;
         border-radius: 0.2em;
         box-sizing: content-box;
         margin-right: 0.3em;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
-        input {
-            position: absolute;
+        div.marker {
+            width: 0.875em;
+            height: 0.875em;
             opacity: 0;
-            cursor: pointer;
-            height: 0;
-            width: 0;
-            margin: 0;
+            transition: opacity 0.1s ease;
         }
-
-        .mark {
-            position: absolute;
-            top: 0;
-            left: 0;
-            height: 1.2em;
-            width: 1.2em;
-            background-color: white;
-            border-radius: 0.2em;
-            box-sizing: border-box;
-
-            .marker {
-                position: absolute;
-                display: none;
-                left: 0.2em;
-                top: 0.2em;
-                width: 0.8em;
-                height: 0.8em;
-                border-radius: 0.1em;
-            }
-            .marker.visible {
-                display: block;
-            }
+        div.marker.visible {
+            opacity: 1;
         }
     }
 }
