--- a/lib/components/fo_radio/_mixins.scss
+++ b/lib/components/fo_radio/_mixins.scss
@@ -1,22 +1,18 @@
 @mixin fo-radio-colors($higlight, $border) {
-    ::ng-deep fo-radio > #checkContainer {
-        border-color: $border !important;
-        input ~ .mark {
+    ::ng-deep fo-radio {
+        div#radioContainer {
             border-color: $border !important;
-        }
 
-        input:checked ~ .mark:after {
-            //border-color: $higlight !important;
-            background-color: $higlight !important;
+            div.marker {
+                background-color: $higlight !important;
+            }
         }
-
-        input:disabled ~ .mark {
+        div#radioContainer.disabled {
             border-color: $border !important;
             background-color: darken(white, 5%) !important;
-        }
-
-        input:disabled ~ .mark:after {
-            background-color: darken(white, 25%) !important;
+            div.marker {
+                background-color: darken(white, 25%) !important;
+            }
         }
     }
 }
