--- a/lib/components/fo_radio/fo_radio_component.scss
+++ b/lib/components/fo_radio/fo_radio_component.scss
@@ -1,61 +1,32 @@
 :host {
     display: flex;
     align-items: center;
-    #checkContainer {
-        width: 1.2em;
-        height: 1.2em;
+    div#radioContainer {
+        width: 1.25em;
+        height: 1.25em;
+        border-radius: 1.25em;
         position: relative;
         cursor: pointer;
         -webkit-user-select: none;
         -moz-user-select: none;
         -ms-user-select: none;
         user-select: none;
-        border: 1px solid; // #ccc;
-        border-radius: 1.2em;
+        border: 1px solid;
         box-sizing: content-box;
         margin-right: 0.3em;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
-        // Hide the default radio button
-        input {
-            position: absolute;
+        div.marker {
+            width: 0.875em;
+            height: 0.875em;
             opacity: 0;
-            cursor: pointer;
-            height: 0;
-            width: 0;
-            margin: 0;
+            border-radius: 0.875em;
+            transition: opacity 0.1s ease;
         }
-
-        // Show the checkmark when checked
-        input:checked ~ .mark:after {
-            display: block;
-        }
-
-        .mark {
-            position: absolute;
-            top: 0;
-            left: 0;
-            height: 1.2em;
-            width: 1.2em;
-            background-color: white;
-            border-radius: 1.2em;
-            box-sizing: border-box;
-        }
-
-        // Create the checkmark/indicator (hidden when not checked)
-        .mark:after {
-            content: "";
-            position: absolute;
-            display: none;
-        }
-
-        // Style the checkmark/indicator
-        .mark:after {
-            left: 0.2em;
-            top: 0.2em;
-            width: 0.8em;
-            height: 0.8em;
-            background-color: white;
-            border-radius: 50%;
+        div.marker.visible {
+            opacity: 1;
         }
     }
 }
