--- a/lib/components/fo_toggle/fo_toggle_component.scss
+++ b/lib/components/fo_toggle/fo_toggle_component.scss
@@ -1,55 +1,30 @@
 :host {
     display: flex;
     align-items: center;
-    /* The switch - the box around the slider */
-    .switch {
-        position: relative;
-        display: inline-block;
+
+    div.slider {
+        margin-right: 0.3em;
         width: 2em;
         height: 1em;
-        margin-right: 0.3em;
-        border-radius: 2em;
-
-        /* Hide default HTML checkbox */
-        input {
-            opacity: 0;
-            width: 0;
-            height: 0;
-            margin: 0;
-        }
-
-        /* The slider */
-        .slider {
-            position: absolute;
-            cursor: pointer;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background-color: white;
-            -webkit-transition: 0.2s;
-            transition: 0.2s;
-
-            border-radius: 1em;
-        }
-
-        .slider:before {
-            position: absolute;
-            content: "";
-            height: 1.2em;
-            width: 1.2em;
-            top: -0.1em;
+        border-radius: 1.25em;
+        border-width: 1px;
+        border-style: solid;
+        transition: background-color 0.1s ease;
+        div.marker {
+            width: 1.25em;
+            height: 1.25em;
+            margin-top: -0.125em;
+            margin-left: -0.125em;
+            border-width: 1px;
+            border-style: solid;
             box-sizing: border-box;
-            background-color: white;
-            -webkit-transition: 0.2s;
-            transition: 0.2s;
-            border-radius: 50%;
+            border-radius: 1em;
+            transition: transform 0.1s ease;
         }
-
-        input:checked + .slider:before {
-            -webkit-transform: translateX(0.9em);
-            -ms-transform: translateX(0.9em);
-            transform: translateX(0.9em);
+    }
+    div.slider.checked {
+        div.marker {
+            transform: translateX(1em);
         }
     }
 }
