added tab index

--- a/lib/components/fo_button/fo_button_component.html
+++ b/lib/components/fo_button/fo_button_component.html
@@ -1,4 +1,5 @@
 <button [disabled]="disabled == true"
+        tabindex="0"
         class="themeable background-color-primary"
         [style.background-color]="themeBackgroundColor"
         [style.border-color]="themeBackgroundColor"
