--- a/lib/components/fo_date_picker/fo_date_picker_component.html
+++ b/lib/components/fo_date_picker/fo_date_picker_component.html
@@ -1,6 +1,7 @@
 <fo-label [value]="label"
           (click)="onClick($event)"></fo-label>
 <div id="flexContainer"
+     tabindex="0"
      [class.focus]="dropdownVisible">
     <div id="selector"
          [class.disabled]="disabled == true"
