--- a/lib/components/fo_toggle/fo_toggle_component.html
+++ b/lib/components/fo_toggle/fo_toggle_component.html
@@ -1,4 +1,5 @@
 <div class="slider"
+     tabindex="0"
      [class.disabled]="disabled"
      [class.checked]="checked"
      (click)="onChange()">
