--- a/lib/components/fo_toggle/fo_toggle_component.scss
+++ b/lib/components/fo_toggle/fo_toggle_component.scss
@@ -3,6 +3,7 @@
     align-items: center;
 
     div.slider {
+        outline: none;
         margin-right: 0.3em;
         width: 2em;
         height: 1em;
