implement progress-bar and  more static type checks

--- a/lib/_mixins.scss
+++ b/lib/_mixins.scss
@@ -12,6 +12,7 @@ $transitionSpeed: 0.3s ease;
 @import "components/fo_tab/mixins";
 @import "components/fo_text_input/mixins";
 @import "components/fo_load_indicator/mixins";
+@import "components/fo_progress_bar/mixins";
 @import "components/fo_check/mixins";
 @import "components/fo_radio/mixins";
 @import "components/fo_toggle/mixins";
@@ -36,7 +37,8 @@ $transitionSpeed: 0.3s ease;
   $alertColorDark: darken($alertColor, $lightstep);
   $alertColorBright: lighten($alertColor, $lightstep);
 
-  @include fo-load-indicator-color($primaryColor);
+  @include fo-progress-bar-colors($primaryColor, white, $grayColorBright);
+  @include fo-load-indicator-colors($primaryColor, white);
   @include fo-check-colors($primaryColor, lighten($grayColor, $lightstep));
   @include fo-radio-colors($primaryColor, lighten($grayColor, $lightstep));
   @include fo-toggle-colors($primaryColor, lighten($grayColor, $lightstep));
@@ -45,7 +47,7 @@ $transitionSpeed: 0.3s ease;
   @include fo-dropdown-list-colors($primaryColor, $grayColor, $grayColorBright);
   @include fo-date-picker-colors($grayColor, $grayColorBright, $primaryColor);
   @include fo-dropdown-select-colors($grayColor, $grayColorBright, $primaryColor);
-  @include fo-file-upload-border-color($grayColorBright);
+  @include fo-file-upload-colors($grayColorBright, $grayColorBright);
   @include fo-image-file-colors($grayColorBright, $grayColorBright, $grayColor);
   @include fo-label-color(darken($grayColor, $lightstep));
   @include fo-modal-colors(lighten($grayColorBright, 10%), $alertColor);
