--- a/lib/components/fo_image_file/fo_image_file_component.html
+++ b/lib/components/fo_image_file/fo_image_file_component.html
@@ -1,4 +1,4 @@
-<label>{{label}}</label>
+<fo-label [value]="label"></fo-label>
 <div class="container"
      [class.border]="source == null || source.isEmpty"
      (dragenter)="$event.preventDefault()"
