--- a/lib/components/fo_load_indicator/_mixins.scss
+++ b/lib/components/fo_load_indicator/_mixins.scss
@@ -1,6 +1,9 @@
-@mixin fo-load-indicator-color($color) {
+@mixin fo-load-indicator-colors($color, $backgroundColor) {
     ::ng-deep fo-load-indicator {
         .spinner {
+            .circleCore {
+                background-color: $backgroundColor;
+            }
             .circleBorder {
                 background: $color;
                 background: linear-gradient(0deg, transparent 33%, $color 100%);
