--- a/lib/components/fo_radio/fo_radio_component.scss
+++ b/lib/components/fo_radio/fo_radio_component.scss
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     div#radioContainer {
+        background-color: white;
         width: 1.25em;
         height: 1.25em;
         border-radius: 1.25em;
