--- a/lib/components/fo_check/fo_check_component.scss
+++ b/lib/components/fo_check/fo_check_component.scss
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     div#checkContainer {
+        background-color: white;
         width: 1.25em;
         height: 1.25em;
         position: relative;
