--- a/lib/components/fo_date_picker/fo_date_picker_component.scss
+++ b/lib/components/fo_date_picker/fo_date_picker_component.scss
@@ -75,6 +75,7 @@
             tr {
                 td {
                     text-align: center;
+                    vertical-align: middle;
                 }
             }
             tbody {
