--- a/lib/components/fo_progress_bar/_mixins.scss
+++ b/lib/components/fo_progress_bar/_mixins.scss
@@ -1,8 +1,7 @@
-@mixin fo-progress-bar-colors($color, $backgroundColor, $borderColor) {
+@mixin fo-progress-bar-colors($color, $backgroundColor) {
     ::ng-deep fo-progress-bar {
         div#bar {
             background-color: $backgroundColor;
-            border-color: $borderColor;
         }
 
         div#bar > div#progress {
