--- a/lib/components/fo_toggle/_mixins.scss
+++ b/lib/components/fo_toggle/_mixins.scss
@@ -1,10 +1,8 @@
-@mixin fo-toggle-colors($higlight, $border) {
+@mixin fo-toggle-color($higlight) {
     ::ng-deep fo-toggle {
         div.slider {
-            border-color: $border;
-            background-color: white;
+            background-color: darken(white, 10%);
             div.marker {
-                border-color: $border;
                 background-color: white;
             }
         }
@@ -14,7 +12,12 @@
         }
 
         div.slider.disabled {
-            background-color: darken(white, 5%) !important;
+            div.marker {
+                background-color: darken(white, 10%) !important;
+            }
+        }
+        div.slider.disabled.checked {
+            background-color: darken(white, 20%) !important;
         }
     }
 }
