--- a/lib/components/fo_date_picker/_mixins.scss
+++ b/lib/components/fo_date_picker/_mixins.scss
@@ -20,7 +20,7 @@
             thead {
                 tr {
                     td {
-                        color: $highlightColor;
+                        color: $selectedValueColor;
                     }
                 }
             }
