--- a/lib/components/fo_chip/fo_chip_component.scss
+++ b/lib/components/fo_chip/fo_chip_component.scss
@@ -1,8 +1,8 @@
 :host {
-  div#foChip {
+  #foChip {
     display: inline;
-    color: rgb(249, 255, 246);
-    background-color: rgb(50, 131, 50);
+    color: white;
+    background-color: gray;
     padding: 0.1em 0.2em 0.1em 0.2em;
     border-radius: 6px;
   }
