--- a/lib/_mixins.scss
+++ b/lib/_mixins.scss
@@ -17,6 +17,7 @@ $transitionSpeed: 0.3s ease;
 @import "components/fo_check/mixins";
 @import "components/fo_radio/mixins";
 @import "components/fo_toggle/mixins";
+@import "components/fo_chip/mixins";
 
 @mixin foregroundColor($color) {
   color: $color;
@@ -55,6 +56,7 @@ $transitionSpeed: 0.3s ease;
   @include fo-panel-colors($grayColor);
   @include fo-tab-panel-colors(darken($grayColor, $lightstep), $primaryColor, $grayColorBright);
   @include fo-text-input-colors(darken($grayColor, $lightstep), $grayColorBright, $primaryColor, $alertColor);
+  @include fo-chip-colors($primaryColor, white, $grayColorBright);
 
   ::ng-deep .black-color {
     @include foregroundColor(#555);
