tweaked numberinput layout

--- a/lib/components/fo_number_input/fo_number_input_component.scss
+++ b/lib/components/fo_number_input/fo_number_input_component.scss
@@ -1,6 +1,3 @@
-//@import "package:fo_components/components/fo_text_input/mixins";
-//@import "package:fo_components/components/fo_button/mixins";
-
 :host {
   display: block;
   div#flexContainer {
@@ -8,7 +5,12 @@
     align-items: stretch;
     justify-content: center;
 
+    fo-button {
+      height: 100%;
+    }
+
     fo-text-input {
+      flex: 1;
       box-sizing: border-box;
     }
 
