chip close-icon

--- a/lib/components/fo_chip/fo_chip_component.html
+++ b/lib/components/fo_chip/fo_chip_component.html
@@ -1,1 +1,5 @@
-<div id="foChip">{{name}}</div>
+<div id="foChip">{{name}}
+  <fo-icon icon="close-outline"
+           [material]="false"
+           id="foIcon"></fo-icon>
+</div>
