--- a/lib/components/fo_chip/fo_chip_component.scss
+++ b/lib/components/fo_chip/fo_chip_component.scss
@@ -6,4 +6,8 @@
     padding: 0.1em 0.2em 0.1em 0.2em;
     border-radius: 6px;
   }
+  #foIcon {
+    font-size: 0.6em;
+    margin-left: 0.5em;
+  }
 }
