--- a/lib/components/fo_panel/fo_panel_component.scss
+++ b/lib/components/fo_panel/fo_panel_component.scss
@@ -7,9 +7,9 @@
     @include boxShadow();
     overflow: visible;
     display: block;
-    padding: 1rem;
     background-color: white;
     div#header {
+      padding: 1rem;
       cursor: pointer;
       display: flex;
       align-items: center;
@@ -25,7 +25,7 @@
       }
     }
     div#content {
-      margin-top: 0.5rem;
+      padding: 0 1rem 1rem 1rem;
     }
   }
 }
