--- a/lib/components/fo_reorder_list/fo_reorder_list_component.scss
+++ b/lib/components/fo_reorder_list/fo_reorder_list_component.scss
@@ -1,5 +1,5 @@
 :host {
-    ::ng-deep .extraDropZone {
-        height: 20px;
-    }
+    display: block;
+    position: relative;
+    overflow: hidden;
 }
