use mixin instead of input

--- a/lib/components/fo_reorder_list/fo_reorder_list_component.scss
+++ b/lib/components/fo_reorder_list/fo_reorder_list_component.scss
@@ -2,4 +2,8 @@
     display: block;
     position: relative;
     overflow: hidden;
+
+    ::ng-deep .extraDropZone {
+        height: 30px;
+    }
 }
