--- a/lib/components/fo_panel/fo_panel_component.scss
+++ b/lib/components/fo_panel/fo_panel_component.scss
@@ -25,7 +25,12 @@
       }
     }
     div#content {
-      padding: 0 1rem 1rem 1rem;
+      transition: height 0.3s ease;
+      overflow: hidden;
+      height: 0;
+      div#contentInner {
+        padding: 0 1rem 1rem 1rem;
+      }
     }
   }
 }
